# maze

./: .gitignore  CMakeLists.txt  README.md  guard_header.sh  main.cpp  makefile  maze.h  plane.cpp  plane.hpp  todo.txt
include/: coord.hpp  cursor_window.hpp  dynamic_array.h  field.hpp  field_factory.hpp  game.h  game.hpp  graphics_controler.h  ncurses_window.hpp  path.hpp  point.hpp  wall.hpp
res/: simple_map.txt
src/: CMakeLists.txt  coord.cpp  dynamic_array.c  field.cpp  field.hpp  field_factory.cpp  game.c  game.cpp  graphics_controler.c  main.c  main.cpp  ncruses_window.hpp  ncurses_engine.cpp  ncurses_keyboard.cpp  ncurses_renderer.cpp  ncurses_renderer.hpp  ncurses_window.cpp  point.cpp  window_properties.hpp
src/maze/: CMakeLists.txt  door.cpp  door.hpp  linear_2dmaze_storage.cpp  linear_2dmaze_storage.hpp  main.cpp  map_site.hpp  maze.cpp  maze.hpp  maze2d.hpp  maze_builder.hpp  maze_dimensions.hpp  maze_storage.cpp  maze_storage.hpp  pawn.cpp  pawn.hpp  player.cpp  player.hpp  room.cpp  room.hpp  standard_maze_builder.cpp  standard_maze_builder.hpp  wall.cpp  wall.hpp
src/renderer/: CMakeLists.txt  ncurses_engine.hpp  ncurses_keyboard.hpp  ncurses_renderer.cpp  ncurses_renderer.hpp  ncurses_window.cpp  window_size.hpp
tests/: graphics_controler_tests.c
